# data-engineering-zoomcamp

./: .gitignore  README.md
01-docker-terraform/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  pyproject.toml
02-orchestration-airflow/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  upload_data.py
02-orchestration-airflow/dags/: data_pipeline.py  docker_stats.py  hello_world.py  taxi_to_duckdb.py  taxi_to_duckdb_manual.py  taxi_to_gcp.py  taxi_to_gcp_scheduled.py
02-orchestration-airflow/terraform/: .gitignore  main.tf  variables.tf
04-analytics-engineering/: Dockerfile  docker-compose.yaml  profiles.yml  pyproject.toml
04-analytics-engineering/taxi_rides_ny/: .sqlfluff  README.md  dbt_project.yml
04-analytics-engineering/taxi_rides_ny/macros/: get_payment_type_name.sql  get_vendors_names.sql
04-analytics-engineering/taxi_rides_ny/models/marts/: dim_vendors.sql  dim_zones.sql  fact_trips.sql  schema.yml
04-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
04-analytics-engineering/taxi_rides_ny/scripts/: ingest_data.py
pipeline/: README.md  notebook.ipynb  notebook.py  pipeline.py  pyproject.toml
