[project]
name = "pipeline"
version = "0.1.0"
description = "NYC Taxi data ingestion pipeline with DuckDB and GCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "duckdb>=1.1.3",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "marimo>=0.19.7",
]
